--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -3,39 +3,35 @@ name: repo_update
 on: [push]
 
 jobs:
-
   update:
-  
     runs-on: ubuntu-latest
     
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Python 3.5
+      - name: Setup Python 3.9
         uses: actions/setup-python@v2
         with:
-          python-version: '3.5'
+          python-version: '3.9'
       - name: pip install
         run: pip install pathspec
 
-      - name: Set author
-        uses: fregante/setup-git-token@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          name: github-actions[bot]
-          email: 41898282+github-actions[bot]@users.noreply.github.com
+      - name: Set user
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
       - name: Pull
         run: |
           git pull --rebase
       - name: Update
         run: |
-          curl -O https://raw.githubusercontent.com/thpatch/thcrap/master/scripts/utils.py
-          curl -O https://raw.githubusercontent.com/thpatch/thcrap/master/scripts/repo_update.py
-          python repo_update.py
+          mkdir _build
+          curl -L -o _build/utils.py https://raw.githubusercontent.com/thpatch/thcrap/master/scripts/utils.py
+          curl -L -o _build/repo_update.py https://raw.githubusercontent.com/thpatch/thcrap/master/scripts/repo_update.py
+          python _build/repo_update.py
       - name: Push
         run: |
-          rm -r __pycache__/ repo_update.py utils.py
           git add .
           git commit -am "repo_update"
           git push
